<resources>
    <string name="app_name">appListaCursos</string>
    <string name="txt_aplicativo_de_cursos">Aplicativo de cursos</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato:</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome:</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome:</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>

    <string-array name="cursos">
        <item>Escolha o curso: </item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>C++</item>
        <item>Android</item>
        <item>Python</item>
        <item>C#</item>

    <string-array name="spinner_lista">
        <item>Escolha o seu curso:</item>
        <item>Banco de dados</item>
        <item>Desenvolvedor de Sistemas</item>
        <item>Tecnico em Informatica</item>
        <item>Python</item>
        <item>Estetica</item>
        <item>Cabeleleiro</item>
        <item>Java</item>
    </string-array>
</resources>