<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="215dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:text="@string/txt_aplicativo_de_cursos"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="394dp"
        android:layout_height="48dp"

        android:layout_marginTop="36dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_de_contato"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sobrenome" />

    <Button
        android:id="@+id/btnfinalizar"
        android:layout_width="360dp"
        android:layout_height="57dp"
        android:layout_marginBottom="36dp"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sobrenome"
        android:layout_width="394dp"
        android:layout_height="48dp"

        android:layout_marginTop="36dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primeironome" />

    <Button
        android:id="@+id/btnsalvar"
        android:layout_width="120dp"
        android:layout_height="60dp"

        android:layout_marginTop="100dp"
        android:text="@string/txt_button_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomecurso" />
        android:layout_marginTop="92dp"
        android:text="@string/txt_button_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btnlimpar"
        android:layout_width="120dp"
        android:layout_height="60dp"

        android:layout_marginTop="100dp"
        android:text="@string/txt_button_limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomecurso" />

    <EditText
        android:id="@+id/primeironome"
        android:layout_width="394dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        android:layout_marginTop="92dp"
        android:text="@string/txt_button_limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/nomecurso"
        android:layout_width="394dp"
        android:layout_height="48dp"

        android:layout_marginTop="36dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="394dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone" />

</androidx.constraintlayout.widget.ConstraintLayout>